# Flexer-Framework

./: CMakeLists.txt  Makefile  README.md  build.sh  compile_run.sh  project.4coder  run.sh
minBuild/: Makefile  ReadMe.txt
res/shaders/: background.fs  background.vs  sprite.fs  sprite.vs
src/: main.cpp
src/common/: array_stack.cpp  array_stack.h  util.cpp  util.h
src/core/: input.cpp  input.h  m4.h  math.h  quat.h  time.cpp  time.h  v2.h  v3.cpp  v3.h  v4.h
src/ecs/: ecs.cpp  ecs.h
src/ecs/components/: camera_component.cpp  camera_component.h  comp_data.h  sprite_component.cpp  sprite_component.h  transform_component.cpp  transform_component.h
src/ecs/types/: sprite.cpp  sprite.h
src/game/: game.cpp  game.h
src/rendering/: renderer.cpp  renderer.h  shader.cpp  shader.h  sprite_temp.cpp  sprite_temp.h  window.cpp  window.h
